<resources>
    <string name="app_name">Mangrove</string>
    <string name="login">LOGIN</string>
    <string name="take_tour">TAKE A TOUR</string>
    <string name="facilities">Facilities</string>
    <string name="residential">Residentials</string>
    <string name="welcome">WELCOME TO MANGROVE</string>
    <string name="gallery">Gallery</string>
    <string name="beauty">Beauty</string>
    <string name="more">MORE</string>
    <string name="action_settings">Settings</string>
    <string name="unit_app">Annual Unit Application</string>
    <string name="apply">Apply Online</string>
    <string name="margin_top">margin top</string>


    <string name="email">Email</string>
    <string name="username">USERNAME</string>
    <string name="pwd">PASSWORD</string>
    <string name="login_btn">LOGIN</string>
    <string name="forget_pwd">Forget Password?</string>

    <string name="oia_text">this is oia text.this is oia text.this is oia text.this is oia text.this is oia text.this is oia text.this is oia text.this is oia text.</string>
    <string name="units">Units</string>
    <string name="guest_house">Guest House</string>
    <string name="locker_membership">Locker Membership</string>
    <string name="oia_form_text">OIA RESORT APPLICATION FORM</string>
    <string name="boho_form_text">BOHO RESORT APPLICATION FORM</string>
    <string name="marine_form_text">Marine Services Application</string>
    <string name="annual_mem">ANNUAL UNITS</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="id_no">ID No.</string>
    <string name="dob">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="select_service">Select Service</string>
    <string name="title">Title</string>
    <string name="profession">Profession</string>
    <string name="home_country">Home Country</string>
    <string name="offc_country">Office Country</string>
    <string name="home_city">Home City</string>
    <string name="offc_city">Office City</string>
    <string name="no_of_fam_membs">No.of Family Members</string>
    <string name="profile_img">Profile Image:</string>
    <string name="browse">Browse</string>
    <string name="select_facility">Select Facility</string>
    <string name="select_role">Select Role</string>
    <string name="visi_gender">Gender:</string>

    <string name="about_us_info">Mangrove Beach Resort is located in Jeddah, North obhur only 15 minutes from King Abdul-Aziz international airport. Where you will be absorbed by the wonderful panorama from the sunrise to the sunset and enjoy elite services with family and friends.
        \n\nMangrove is the real meaning of elegance, simplicity. It’s not only a resort it is a unique residential beach resort where you can enjoy elite services.
</string>

    <string name="boho_info">Boho Beach is another unique concept presented by Blue Limits Co. It is designed to be an exceptional gateway that will have you mesmerized and reconnect with the good vibes in no time.
\n\nBoho Beach is where freedom, peace, and happiness are in abundance and it is comprised of a very limited number of villas, one bedroom apartments, studios and locker memberships along with amenities and facilities that will make your visits worthwhile.</string>

    <string name="marine_info">• Above and below water inspection services for marine and coastal structures such as seabed, seawalls, piers, groins and breakwaters.\n

\n• Marina and component inspections.\n


\n• Due diligence and valuation.
    </string>

    <string name="sa_code">9665</string>
    <string name="remaining_days">Remaining Days:</string>
    <string name="expiry_date">Date of Expiry:</string>
    <string name="start_date">Start Date</string>
    <string name="contact_info">Contact Information</string>
    <string name="personal_info">Personal Information</string>
    <string name="fam_members">Family Members</string>
    <string name="mobile">Mobile No:</string>
    <string name="unit">Unit No</string>
    <string name="email_profile">Email:</string>
    <string name="id_profile">ID No:</string>
    <string name="total_mems">Total Family Members:</string>
    <string name="visi_name">Name:</string>
    <string name="visi_contact">Contact:</string>


    <string name="invite">INVITE A VISITOR</string>
    <string name="visitor">Visitor</string>
    <string name="visitors">No of Visitors</string>
    <string name="visiting_date">Visiting Date/Time</string>
    <string name="name_visi">Visitor Name</string>
    <string name="id_visi">ID NO.</string>
    <string name="mobile_visi">Mobile</string>
    <string name="price">Price</string>
    <string name="pay">I will pay</string>

    <string name="my_dashboard">My Dashboard</string>
    <string name="my_profile">My Profile</string>
    <string name="invite_visitor">Invite a visitor</string>
    <string name="reservation">Guest House Reservation</string>
    <string name="contract">My Contract</string>
    <string name="services">Service Request</string>
    <string name="about">About Mangrove</string>
    <string name="tour_menu">Take a Tour</string>
    <string name="contact">Contact Us</string>
    <string name="terms">Terms &amp; Conditions</string>
    <string name="logout">Logout</string>
    <string name="login_menu">Login</string>
    <string name="logout_msg">Do you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="admin">Admin</string>
    <string name="customer">Customer</string>
    <string name="days_rem">DAYS REMAINING</string>
    <string name="total_invites">TOTAL INVITES</string>
    <string name="expiry">CONTRACT EXPIRY</string>
    <string name="my_points">MY POINTS</string>
    <string name="points">POINTS</string>

    <string name="req_trip">REQUEST A TRIP</string>

    <string name="oia_beach">OIA BEACH</string>
    <string name="boho_beach">BOHO BEACH</string>
    <string name="marine_services">MARINE SERVICES</string>
    <string name="about_us">ABOUT BLUE LIMITS</string>

    <string name="available_units">Available units</string>
    <string name="payable">Total amount Payable:</string>
    <string name="guests">No. of Guests</string>
    <string name="max_guests">guests are allowed</string>
    <string name="max">Max</string>
    <string name="select_resort">Select Resort</string>
    <string name="check_in">Check In Date</string>
    <string name="check_out">Check out Date</string>
    <string name="guest">Guest</string>
    <string name="guest_name">Guest Name</string>
    <string name="max_visitors">visitors are allowed</string>

    <string name="contact_detail">Contact Details</string>
    <string name="oia_tel">Tel : +966-12-6224396</string>
    <string name="oia_fax">Fax : +966-12-6224396</string>
    <string name="po_Box">PO Box : +966-12-6224396</string>
    <string name="oia_address"> Obhur Al-Shamaliyah, Jeddah 23815, Saudi Arabia</string>

    <string name="profile_error">Profile loading failed.</string>
    <string name="login_error">Login Failed</string>
    <string name="connectivity_error">Internet not connected</string>
    <string name="empty_fields">Please enter data</string>
    <string name="no_pckg_error">Please select any package.</string>
    <string name="ok">Ok</string>
    <string name="loading_error">Loading Failed</string>
    <string name="pckgs_error">Packages not found</string>
    <string name="adding_member_error">Sorry.Cannot add member</string>
    <string name="missing_date">Please add visiting date first.</string>
    <string name="submit">Submit</string>
    <string name="visitor_error">Please add any visitor</string>
    <string name="add_visitor_error">Please select atleast 1 female</string>
    <string name="add_member_error">Member id already exists.</string>
    <string name="units_loading_error">Units loading failed</string>
    <string name="no_units">No available units</string>
    <string name="guests_exceeded">Guest limit exceeded.</string>
    <string name="adding_guest_error">Sorry.Cannot add guest</string>
    <string name="facility">facility</string>
    <string name="bedroom_4">4 Bedroom</string>
    <string name="bedroom_3">3 Bedroom</string>
    <string name="bedroom_2">2 Bedroom</string>
    <string name="villa">VILLA</string>
    <string name="apartments">APARTMENTS</string>
    <string name="banglows">BANGLOWS</string>
    <string name="visitor_app">Visitor Invitation Application</string>


    <string name="reserv_date">Reservation date</string>
    <string name="full_name">Full Name</string>
    <string name="contact_num">Contact Number</string>
    <string name="invalid_date">Invalid date</string>
    <string name="date_format">DD-MM-YYYY hh:mm a</string>
    <string name="gh_date_format">DD-MM-YYYY</string>
    <string name="number_code">966 5</string>
    <string name="booking_unavialble">Booking not avialble.Choose another date.</string>
    <string name="select_date">Select date</string>
    <string name="invalid_credentials">Invalid Credentials</string>

    <string name="dashboard">Dashboard</string>
    <string name="my">My</string>
    <string name="req_id">Request ID:</string>
    <string name="req_date_time">Request Date:</string>
    <string name="service">Service:</string>
    <string name="comments">Comments:</string>
    <string name="create">Create New</string>
    <string name="req_service">Request Service Application</string>
    <string name="attach_img">Attach Image</string>
    <string name="comments_serv">Comments</string>
    <string name="view_listings">View Listings</string>
    <string name="view_visitors">View Visitors</string>
    <string name="name">Name:</string>

    <string name="in_progress">In-progress</string>
    <string name="rejected">Rejected</string>
    <string name="completed">Completed</string>
    <string name="pending">pending</string>
    <string name="visitor_price">Price:</string>
    <string name="visitors_heading">Visitors</string>

    <string name="contact_error">Contact number should be of atleast 8 digits.</string>
    <string name="email_error">Invalid email.</string>
    <string name="id_error">Please enter id.</string>
    <string name="lname_error">Please enter last name.</string>
    <string name="fname_error">Please enter first name.</string>
    <string name="service_req_success">SERVICE REQUEST SUBMITTED SUCCESSFULLY.</string>
    <string name="visitor_invite_success">VISITOR INVITATION REQUEST HAS BEEN SUBMITTED SUCCESSFULLY.</string>

</resources>