<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_dashboard"
            android:title="@string/my_dashboard" />
        <item
            android:id="@+id/nav_invite_visitor"
            android:title="@string/invite_visitor" />
        <item
            android:id="@+id/nav_reservation"
            android:title="@string/reservation" />

        <item
            android:id="@+id/nav_services"
            android:title="@string/services"
            />

        <item
            android:id="@+id/nav_about"
            android:title="@string/about" />

        <item
            android:id="@+id/nav_contact"
            android:title="@string/contact" />

        <item
            android:id="@+id/nav_terms"
            android:title="@string/terms" />

        <item
            android:id="@+id/nav_application"
            android:title="@string/unit_app" />


        <item
            android:id="@+id/nav_tour"
            android:title="@string/tour_menu" />

        <item
            android:id="@+id/nav_login"
            android:title="@string/login_menu" />

        <item
            android:id="@+id/nav_logout"
            android:title="@string/logout" />


    </group>
</menu>