<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp">

        <ImageView
            android:id="@+id/iv"
            android:layout_width="@dimen/_125sdp"
            android:layout_height="@dimen/_150sdp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="15dp"
            android:scaleType="fitXY"
            android:src="@drawable/circle_image" />

        <TextView
            android:id="@+id/tv_mangrove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textColor="@color/navy_blue"
            android:textSize="28sp"></TextView>

        <TextView
            android:id="@+id/tv_beauty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_mangrove"
            android:text="@string/beauty"
            android:textAllCaps="true"
            android:textColor="@color/grey"
            android:textSize="25sp"
            android:textStyle="bold"></TextView>

        <TextView
            android:id="@+id/tv_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:text="@string/about_us_info"
            android:textColor="@color/light_black"
            android:textSize="@dimen/_12ssp"></TextView>

        <Button
            android:id="@+id/btn_more"
            android:layout_width="@dimen/_115sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_below="@+id/tv_info"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_weight="1"
            android:background="@drawable/btn_bg"
            android:text="@string/more"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_14ssp"></Button>

        <View
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_below="@+id/btn_more"></View>


    </RelativeLayout>
</ScrollView>