<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="familyMember"
            type="com.app.mangrove.model.FamilyMember" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="@color/light_black"
            android:textStyle="bold"
            android:text="@string/id_profile"></TextView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="15dp"
            android:textColor="@color/light_black"
            android:textStyle="bold"
            android:text="@string/name"></TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="15dp"
            android:textColor="@color/light_black"
            android:textStyle="bold"
            android:text="@string/mobile"></TextView>

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tv_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textStyle="bold"
            android:textColor="@color/blue_text"
            android:text="@{familyMember.id}"
            ></TextView>


        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="15dp"
            android:textColor="@color/blue_text"
            android:textStyle="bold"
            android:text="@{familyMember.name}"
            ></TextView>

        <TextView
            android:id="@+id/tv_mobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="15dp"
            android:textColor="@color/blue_text"
            android:textStyle="bold"
            android:text="@{familyMember.contact_no}"
            ></TextView>

       </LinearLayout>
        <ImageView
            android:id="@+id/iv_qr"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginLeft="30dp"
            android:imageUrl="@{familyMember.qr_code}"
            android:scaleType="fitXY" />

    </LinearLayout>

</layout>